testsuite/tests/grammar/invalid_rule_usage/test.out
== foo.lkt ==
foo.lkt:5:41: error: Cannot find entity `sec_rules` in this scope
5 |     @main_rule main_rule <- ExampleNode(sec_rules)
  |                                         ^^^^^^^^^


Done
